--- a/news21national/templates/n21alpha/api/v1/newsroom_bios_json.html
+++ b/news21national/templates/n21alpha/api/v1/newsroom_bios_json.html
@@ -1,5 +1,5 @@
 {% if callback %}{{callback}}({% endif %}{"bios":[
     {% for bio in bios %}
-    { "id":"{{ bio.id }}", "name":"{{ bio.first_name }} {{ bio.last_name }}", "bio":"{{ bio.bio }}", "twitter":"{% if profile.twitter_public %}{{ bio.bio }}{% endif %}", "linkedin":"{% if profile.linkedin_public %}{{ bio.linkedinid }}{% endif %}", "facebook":"{% if profile.facebook_public %}{{ bio.facebookid }}{% endif %}" }{% if not forloop.last %},{% endif %}
+    { "id":"{{ bio.id }}", "name":"{{ bio.first_name }} {{ bio.last_name }}", "bio":"{{ bio.bio|escapejs }}", "twitter":"{% if profile.twitter_public %}{{ bio.bio|escapejs }}{% endif %}", "linkedin":"{% if profile.linkedin_public %}{{ bio.linkedinid }}{% endif %}", "facebook":"{% if profile.facebook_public %}{{ bio.facebookid }}{% endif %}" }{% if not forloop.last %},{% endif %}
     {% endfor %}
 ]}{% if callback %}){% endif %}
