--- a/news21national/templates/n21alpha/api/v1/story_json.html
+++ b/news21national/templates/n21alpha/api/v1/story_json.html
@@ -1,1 +1,1 @@
-{% if callback %}{{callback}}({% endif %}{"id":"{{story.id}}","headline":"{{story.headline}}","summary":"{{story.summary}}","process":"{{story.process}}" }{% if callback %}){% endif %}
+{% if callback %}{{callback}}({% endif %}{"id":"{{story.id}}","headline":"{{story.headline|escapejs}}","summary":"{{story.summary|escapejs}}","process":"{{story.process}}" }{% if callback %}){% endif %}
