--- a/news21national/templates/n21alpha/bundle/budget.html
+++ b/news21national/templates/n21alpha/bundle/budget.html
@@ -11,8 +11,8 @@
 {% block content %}
 	<div class="grid_16">
 		<div class="contentcontainer">
-		<div align="center">
-			News21 is part of the Carnegie-Knight Initiative on the Future of Journalism Education. All content is released under <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons</a>.
+		<div align="center" style="background-color:#F49900;color:white;padding:4px 0px 4px 0px;">
+			News21 is part of the Carnegie-Knight Initiative on the Future of Journalism Education. All content is released under <a href="http://creativecommons.org/licenses/by/3.0/" style="color:#666;">Creative Commons</a>.
 			<br/>
 			You may copy and paste this content or, to access the full content using an API key, please contact news@news21.com for an account.
 		</div>
