--- a/news21national/templates/n21alpha/bundle/budget.html
+++ b/news21national/templates/n21alpha/bundle/budget.html
@@ -15,6 +15,8 @@
 			News21 is part of the Carnegie-Knight Initiative on the Future of Journalism Education. All content is released under <a href="http://creativecommons.org/licenses/by/3.0/" style="color:#666;">Creative Commons</a>.
 			<br/>
 			You may copy and paste this content or, to access the full content using an API key, please contact <a href="mailto:news@news21.com" style="color:#666;">news@news21.com</a> for an account.
+			<br/>
+			News21 logos can be found <a href="http://assets.news21.com/logos/news21-200x40.png" target="_blank">here</a> and <a href="http://assets.news21.com/logos/news21-100x100.png" target="_blank">here</a>
 		</div>
 		
 		<br/>
