--- a/news21national/templates/n21alpha/partner/dashboard.html
+++ b/news21national/templates/n21alpha/partner/dashboard.html
@@ -21,6 +21,25 @@
 	<div class="clear"></div>
 	
 	<div style="padding:20px 20px 40px 20px;">
+		<h4>API JSON CALLS</h4>
+		<ul>
+			<li>GET  - http://localhost:8000/api/v1/{APIKEY}/categories/json/</li>
+			<li>GET  - http://localhost:8000/api/v1/{APIKEY}/category/{CATEGORY}/stories/json/</li>
+			<li>GET  - http://localhost:8000/api/v1/{APIKEY}/story/{STORYID}/json/</li>
+			<li>GET  - http://localhost:8000/api/v1/{APIKEY}/story_ec/{STORYID}/json/</li>
+			<li>GET  - http://localhost:8000/api/v1/{APIKEY}/newsrooms/json/</li>
+			<li>GET  - http://localhost:8000/api/v1/{APIKEY}/newsroom/{NEWSROOMID}/bios/json/</li>
+			<li>POST - http://localhost:8000/api/v1/{APIKEY}/filtered_bios/</li>
+			<li>GET  - http://localhost:8000/api/v1/{APIKEY}/media/{MEDIAID}/json/</li>
+			<li>POST - http://localhost:8000/api/v1/{APIKEY}/filtered_stories/</li>
+			<li>GET  - http://localhost:8000/api/v1/{APIKEY}/placements/json/</li>
+			<li>GET  - http://localhost:8000/api/v1/{APIKEY}/organization/{ORGANIZATIONID}/json/</li>
+		</ul>
+	</div>
+	
+	<div class="clear"></div>
+	
+	<div style="padding:20px 20px 40px 20px;">
 		<h4>Bios by: Newsroom</h4>
 		{% for ntags in newsrooms %}
 			<span class="tag"><a href="{% url partner_filter_bios_by_newsroom ntags.id %}">{{ ntags }}</a></span>
