moving toward v2 of api, which will be json only and use slugs instead of ids

--- a/news21national/templates/n21alpha/partner/dashboard.html
+++ b/news21national/templates/n21alpha/partner/dashboard.html
@@ -21,19 +21,19 @@
 	<div class="clear"></div>
 	
 	<div style="padding:20px 20px 40px 20px;">
-		<h4>API JSON CALLS</h4>
+		<h4>API JSON CALLS (V1)</h4>
 		<ul>
-			<li>GET  - http://localhost:8000/api/v1/{APIKEY}/categories/json/</li>
-			<li>GET  - http://localhost:8000/api/v1/{APIKEY}/category/{CATEGORY}/stories/json/</li>
-			<li>GET  - http://localhost:8000/api/v1/{APIKEY}/story/{STORYID}/json/</li>
-			<li>GET  - http://localhost:8000/api/v1/{APIKEY}/story_ec/{STORYID}/json/</li>
-			<li>GET  - http://localhost:8000/api/v1/{APIKEY}/newsrooms/json/</li>
-			<li>GET  - http://localhost:8000/api/v1/{APIKEY}/newsroom/{NEWSROOMID}/bios/json/</li>
-			<li>POST - http://localhost:8000/api/v1/{APIKEY}/filtered_bios/</li>
-			<li>GET  - http://localhost:8000/api/v1/{APIKEY}/media/{MEDIAID}/json/</li>
-			<li>POST - http://localhost:8000/api/v1/{APIKEY}/filtered_stories/</li>
-			<li>GET  - http://localhost:8000/api/v1/{APIKEY}/placements/json/</li>
-			<li>GET  - http://localhost:8000/api/v1/{APIKEY}/organization/{ORGANIZATIONID}/json/</li>
+			<li>GET  - /api/v1/{APIKEY}/categories/json/</li>
+			<li>GET  - /api/v1/{APIKEY}/category/{CATEGORY}/stories/json/</li>
+			<li>GET  - /api/v1/{APIKEY}/story/{STORYID}/json/</li>
+			<li>GET  - /api/v1/{APIKEY}/story_ec/{STORYID}/json/</li>
+			<li>GET  - /api/v1/{APIKEY}/newsrooms/json/</li>
+			<li>GET  - /api/v1/{APIKEY}/newsroom/{NEWSROOMID}/bios/json/</li>
+			<li>POST - /api/v1/{APIKEY}/filtered_bios/</li>
+			<li>GET  - /api/v1/{APIKEY}/media/{MEDIAID}/json/</li>
+			<li>POST - /api/v1/{APIKEY}/filtered_stories/</li>
+			<li>GET  - /api/v1/{APIKEY}/placements/json/</li>
+			<li>GET  - /api/v1/{APIKEY}/organization/{ORGANIZATIONID}/json/</li>
 		</ul>
 	</div>
 	
