update newsroom api v2

--- a/news21national/templates/n21alpha/api/v2/newsrooms_json.html
+++ b/news21national/templates/n21alpha/api/v2/newsrooms_json.html
@@ -1,5 +1,5 @@
 {% if callback %}{{callback}}({% endif %}{"newsrooms":[
     {% for nr in newsrooms %}
-    { "id":"{{ nr }}" }{% if not forloop.last %},{% endif %}
+    { "slug":"{{ nr.short_name }}", "name":"{{ nr }}", "shortcode":"{{ nr.shorter_code }}" }{% if not forloop.last %},{% endif %}
     {% endfor %}
 ]}{% if callback %}){% endif %}
