--- a/news21national/media/templates/n21alpha/css/openlayers.css
+++ b/news21national/media/templates/n21alpha/css/openlayers.css
@@ -8,6 +8,11 @@
     height: 256px;
     border: 1px solid #ccc;
 }
+.bigmap {
+    width: 800px;
+    height: 400px;
+    border: 1px solid #ccc;
+}
 #tags {
     display: none;
 }
