update api to include blog url and fix newsroom member association

--- a/news21national/templates/n21alpha/404.html
+++ b/news21national/templates/n21alpha/404.html
@@ -1,5 +1,23 @@
-{% extends "base.html" %}
-
-{% block content %}
-Opps! 404 Error
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8"/>
+        <title>Asset Management &amp; Syndication | News21</title>
+    
+		<link rel="stylesheet" href="http://assets.news21.com/2010/news21skin.css" type="text/css" media="all" />
+		</head>
+    <body>
+			
+			<div id="news21-header"></div>
+			<div> 404 </div>
+			<div id="news21-footer"></div>
+		  
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.js"></script>
+		<script type="text/javascript" src="{{ MEDIA_URL }}templates/{{ SITE_STYLE }}/js/jsnippets.js"></script>
+		<script type="text/javascript" src="http://assets.news21.com/2010/news21tooltip.js"></script>
+		
+		<script type="text/javascript" src="http://assets.news21.com/2010/news21skin.js"></script>
+		
+    	
+    </body>
+</html>
