--- a/news21national/templates/n21alpha/base.html
+++ b/news21national/templates/n21alpha/base.html
@@ -23,7 +23,7 @@
         {% block head %}{% endblock %}
 
 		<style type="text/css" media="screen">
-			{% block inline_styles %}}{% endblock %}
+			{% block inline_styles %}{% endblock %}
 		</style>
 		
 		{% block feeds %}{% endblock %}
@@ -66,7 +66,6 @@
 			
 			{% block content %}{% endblock %}
 			
-			<br/>
 			<div class="clear"></div>
 
 			<div class="grid_16">
