--- a/news21national/templates/n21alpha/api/v2/organizations_json.html
+++ b/news21national/templates/n21alpha/api/v2/organizations_json.html
@@ -8,9 +8,9 @@
 		{"name":"{{newsroom.name}}",
 			"bios":[{% for profile in newsroom.members.all %}{% for p in profiles %}{% if p.user.id = profile.id %}{
 				"id":"{{ profile.id }}",
-				"name":"{{ profile.first_name }} {{ profile.last_name }}",
-				"bio":"{{ profile.bio|linebreaksbr|escapejs }}",
-				"twitter":"{% if profile.twitter_public %}{{ profile.twitterid }}{% endif %}",
-				"linkedin":"{% if profile.linkedin_public %}{{ profile.linkedinid }}{% endif %}",
-				"facebook":"{% if profile.facebook_public %}{{ profile.facebookid }}{% endif %}" }
+				"name":"{{ p.first_name }} {{ p.last_name }}",
+				"bio":"{{ p.bio|linebreaksbr|escapejs }}",
+				"twitter":"{% if p.twitter_public %}{{ p.twitterid }}{% endif %}",
+				"linkedin":"{% if p.linkedin_public %}{{ p.linkedinid }}{% endif %}",
+				"facebook":"{% if p.facebook_public %}{{ p.facebookid }}{% endif %}" }
 				{% endif %}{% endfor %}{% if not forloop.last %},{% endif %}{% endfor %}],"projects":[{% for metastory in metastories %}{% for msnewsroom in metastory.newsrooms.all %}{% if msnewsroom = newsroom %}{% for project in projects %}{% if metastory.project = project %}{"name":"{{project.name}}","description":"{{project.description}}","thumbnail":"{{project.thumbnail}}","package":[{% for ms in metastories %}{% if ms.project = project %}{"name":"{{ms.headline}}","sub_headline":"{{ms.sub_headline}}","slug":"{{ms.slug}}","summary":"{{ms.summary}}","process":"{{ms.process}}"}{% endif %}{% endfor %}] }{% endif %}{% endfor %}{% endif %}{% endfor %}{% endfor %}]} {% if not forloop.last %},{% endif %}{% endfor %}] }{% if callback %}){% endif %}
