--- a/news21national/templates/n21alpha/api/v1/story_placements_json.html
+++ b/news21national/templates/n21alpha/api/v1/story_placements_json.html
@@ -1,5 +1,5 @@
 {% if callback %}{{callback}}({% endif %}{"placements":[
     {% for placement in placements %}
-    { "date_ran":"{{ placement.story_ran }}", "partner":"{{ placement.partner|escapejs }}", "url":"{{ placement.placement_url }}", "url_active":"{{ placement.url_active }}", "screengrab_url":"{{placement.screengrab_url}}" }{% if not forloop.last %},{% endif %}
+    { "date_ran":"{{ placement.story_ran|date:"N d, Y" }}", "partner":"{{ placement.partner|escapejs }}", "url":"{{ placement.placement_url }}", "url_active":"{{ placement.url_active }}", "screengrab_url":"{{placement.screengrab_url}}" }{% if not forloop.last %},{% endif %}
     {% endfor %}
 ]}{% if callback %}){% endif %}
