--- a/news21national/media/feincms/style.css
+++ b/news21national/media/feincms/style.css
@@ -2,10 +2,6 @@
     top: 20px;
 }
 
-#content.colM {
-    width:845px;
-}
-
 .navi_tab {
     float:left;
     padding: 5px 14px 5px 12px;
@@ -19,6 +15,7 @@
     font-size: 12px;
     background-image:none;
     color: #333333;
+    background: #eee url(img/nav-bg.gif) top repeat-x;
 }
 .tab_active {
     margin-top: 0;
@@ -70,15 +67,18 @@
     float:right;
     margin: 2px 0px 0px 0;
 }
-.active-item {
-    background-color:#f8f8f8;
-    border-color: #888888;
+
+.highlight, .helper {
+    height: 25px;
+    margin: 0 0 10px 0;
+    border: none;
+    opacity: 0.3;
+    background: url('img/item_editor_form_title.png') no-repeat left bottom;
 }
 
-.highlight {
-    height: 26px;
-    background-color:#def;
-    margin: 0 0 10px 0;
+.helper{
+    height: 25px !important;
+    opacity: 1;
 }
 
 .button {
@@ -87,7 +87,6 @@
     background-image:url('img/nav-bg.gif');
     cursor:pointer;
     border: 1px solid #678;
-    width:30px;
 }
 
 th { vertical-align: middle; }
@@ -97,13 +96,17 @@ select {
 }
 
 #main_wrapper {
-    margin: 10px 0 0 0;
+    margin: 10px 0 30px 0;
 }
 
 textarea {
     width: 580px;
     margin-top:5px;
     margin-bottom:5px;
+}
+
+.inline-group .tabular textarea {
+    width: auto;
 }
 
 .item-minimize {
@@ -121,22 +124,42 @@ textarea {
     margin-left:-17px;
 }
 
+.item-controls {
+    background:  url('img/wrench.png') no-repeat 12px center;
+    padding-left:27px;
+    height: 35px;
+}
+
+.item-control-unit {
+    float:left;
+    padding: 3px 10px 0 7px;
+    border-left: 1px solid #eee;
+}
+
+.item-control-unit:first-child {
+    border-left: none;
+}
+
 .machine-control {
     height:50px;
-    padding: 5px 0px 5px 0px;
+    padding: 5px 10px 5px 10px;
     border: 1px solid #ccc;
-    background-color:#fff;
-    width:843px;
+    background-color: #edf3fe;
     position:absolute;
     left:-11px;
     bottom:-11px;
+    width: 100%;
 }
 
 .control-unit {
     float:left;
-    padding-left:15px;
-    padding-right:10px;
-    border-right: 1px solid #eee;
+    padding-left: 5px;
+    padding-right:20px;
+    border-left: 1px solid #eee;
+}
+
+.control-unit:first-child {
+    border-left: none;
 }
 
 .control-unit span {
@@ -235,7 +258,7 @@ tr td.nohighlight {background-color: #fff;}
     text-align: center;
     line-height: 1.75em;
     color: #666;
-    background: #eee url(images/title.gif) top repeat-x;
+    background: #eee url(img/title.gif) top repeat-x;
     border: solid 1px #FFF;
     border-bottom: solid 1px #666;
     cursor: default;
@@ -276,7 +299,7 @@ tr td.nohighlight {background-color: #fff;}
 
 
 /* override Django admin styles */
-.order-machine .module fieldset > h2 {
+.order-machine fieldset.module > h2{
     padding: 4px 5px 6px 17px;
     background: url(img/item_editor_form_title.png) no-repeat left bottom;
 }
@@ -286,21 +309,35 @@ tr td.nohighlight {background-color: #fff;}
     padding-left: 30px;
 }
 
+/* Allow nested lists in error items */
+ul.errorlist ul {
+	margin-left: 1em;
+	padding-left: 0;
+	list-style-type: square;
+}
+
+ul.errorlist li li {
+	/* Avoid repeating the warning image every time*/
+	background-image:none;
+	padding: 0;
+}
+
 /* tree editor */
 
 .page_marker { display:block; text-align: right; float: left; padding: 1px 1px 0 0; }
 tr.cut { border: 2px dashed black; opacity: 0.5; }
 .title-column { width: 400px; }
 
-:focus { background-color: #ccddff !important; outline: 0px; }
-
-/* Positioning Fixes for multiple object-tools: */
-
-#content-main ul.object-tools {
-    float: right;
-    margin: 0 0 1em;
-}
+table#result_list :focus { background-color: #ccddff !important; outline: 0px; }
 
 #page_form {
     clear: both;
+}
+
+div.order-machine div.inline-related > h3{
+    display: none;
+}
+
+.hidden-form-row{
+    display: none;
 }
