--- a/news21national/templates/n21alpha/admin/story/filters_year.html
+++ b/news21national/templates/n21alpha/admin/story/filters_year.html
@@ -14,7 +14,7 @@
 {% for y in years %}
 	<h2>{{ y }}</h2>
 	{% for story in stories %}
-		{% if y == story.year %}
+		{% if y|stringformat:"s" == story.year|stringformat:"s" %}
 			<div style="padding:0px 20px 5px 20px;">
 				{{ story.id }} : <a href="../story/{{ story.id }}">{{ story.headline }}</a> : Story Package - <a href="../metastory/{{ story.metastoryid }}">{{ story.metastory }}</a>
 			</div>
