added bio id to api calls, init commit for republish api call

--- a/news21national/media/templates/n21alpha/css/style.css
+++ b/news21national/media/templates/n21alpha/css/style.css
@@ -211,3 +211,10 @@ fieldset.inlineLabels legend{
 .apidocs-panel h4 {
 	color: #333;
 }
+
+.apidocs-code {
+	background-color:#aad4ff;
+	color: #000;
+	margin:5px 0px 0px 0px;
+	padding:5px;
+}
